[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/screens/scripts/HowToPlayScreen.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/ui/themes/H2_Theme.tres" type="Theme" id=2]
[ext_resource path="res://src/scenes/ui/themes/BodyTheme.tres" type="Theme" id=3]

[node name="HowToPlayScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 200.0
color = Color( 0.101961, 0.176471, 0.309804, 1 )

[node name="TopVBoxContainer" type="VBoxContainer" parent="."]
margin_top = 8.0
margin_right = 320.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TopVBoxContainer"]
margin_top = 5.0
margin_right = 320.0
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "How to play"
align = 1
valign = 1

[node name="Pg1VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 40.0
margin_right = 312.0
margin_bottom = 168.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementLabel" type="Label" parent="Pg1VBoxContainer"]
margin_right = 312.0
margin_bottom = 9.0

[node name="BtnHBoxContainer" type="HBoxContainer" parent="."]
margin_left = 32.0
margin_top = 176.0
margin_right = 288.0
margin_bottom = 192.0
theme = ExtResource( 3 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="BtnHBoxContainer"]
margin_left = 63.0
margin_right = 95.0
margin_bottom = 16.0
text = "Back"

[node name="MainMenuBtn" type="Button" parent="BtnHBoxContainer"]
margin_left = 99.0
margin_right = 157.0
margin_bottom = 16.0
text = "Main Menu"

[node name="NextBtn" type="Button" parent="BtnHBoxContainer"]
margin_left = 161.0
margin_right = 192.0
margin_bottom = 16.0
text = "Next"
[connection signal="button_up" from="BtnHBoxContainer/BackBtn" to="." method="_on_BackBtn_button_up"]
[connection signal="button_up" from="BtnHBoxContainer/MainMenuBtn" to="." method="_on_MainMenuBtn_button_up"]
[connection signal="button_up" from="BtnHBoxContainer/NextBtn" to="." method="_on_NextBtn_button_up"]
